used atomic factoring
